--- a/팀플/kmooc_crawl.ipynb
+++ b/팀플/kmooc_crawl.ipynb
@@ -11,7 +11,8 @@
     "import pandas as pd\n",
     "import asyncio\n",
     "import async_detail\n",
-    "import multy_prep"
+    "import multy_prep\n",
+    "import re"
    ]
   },
   {
@@ -63,11 +64,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "22731ff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = []\n",
+    "for i in id_list:\n",
+    "    params = {'ServiceKey': USER_KEY, 'CourseId': i}\n",
+    "    response = requests.get(BASE+DETAIL, params=params)\n",
+    "    if 'application/json' in response.headers.get('Content-Type', ''):\n",
+    "        json_result = response.json()\n",
+    "        result = json_result['results']\n",
+    "        a.append((result['name'], result['summary']))\n",
+    "    else:\n",
+    "        text = response.text()\n",
+    "        print(f\"[{i}] XML 응답 (에러)\")\n",
+    "        break\n",
+    "names = [i[0] for i in a]\n",
+    "summarys = [i[1] for i in a]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9a702bc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "names, summarys = await async_detail.fetch_all_courses(id_list, BASE+DETAIL, USER_KEY)"
+    "#names, summarys = await async_detail.fetch_all_courses(id_list, BASE+DETAIL, USER_KEY)"
    ]
   },
   {
@@ -86,6 +110,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "139dcadf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = pd.read_csv('kmooc_data.csv')\n",
+    "a['summary'] = a['summary'].apply(lambda x : re.sub(r'[a-zA-Z]', '', str(x)))\n",
+    "a.to_csv('kmooc_data_korean.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f087f19",
    "metadata": {},
    "outputs": [],
    "source": []
